# cameleo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.gradle  cmake_install.cmake
android/: CMakeLists.txt
android/app/src/main/java/com/cameleo/browser/: WebViewActivity.java
cmake/: cefConf.cmake  detectArch.cmake
desktop/: CMakeLists.txt  cef_wrapper.cpp  main.cpp
ios/: WebViewController.swift  main.mm
src/: app.cpp  bookmarks.cpp  browser_manager.cpp  button.rs  history.cpp  layout.rs  main.rs  search.cpp  tab.cpp  tab.rs  text.rs  theme.cpp  theme.rs  translate.cpp
src/main/java/: BrowserController.java  TabManager.java
src/platform/: linux_embed.rs  mac_embed.rs  mod.rs  windows_embed.rs
src/ui/: controls.cpp  layout.cpp  theme_assets.hpp
src/utils/: json_store.cpp
